HelloUltraviolet/Fixtures/RejectedSource/Expressions/SyncOperandRequiresInput/Expected.uv
//! Expected diagnostic metadata for the SyncOperandRequiresInput rejected-source specimen.

expectedDiagnostic("E-CON-0252", "rule.21.Sync-In-Err")
